# tanglit

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  entrypoint.sh  example-code.lit  example-slides.md
backend/: Cargo.toml  Makefile  build.rs  cli.md  left  slide_0.html  slide_1.html  slide_2.html  slide_3.html  temp.html
backend/docs/: user_guide.md
backend/resources/: custom.css  github-markdown-light.css  page_break_and_center.css  reveal_template.html  sakura.css  water.min.css
backend/resources/config/: foo.sh
backend/src/: cli.rs  configuration.rs  dependency_graph.rs  doc.rs  errors.rs  exclude.rs  execution.rs  executor.rs  file_generation.rs  frontend_api.rs  generate_pdf.rs  lib.rs  macro_dependency.rs  main.rs  parser.rs  tangle.rs  util.rs  utils.rs
backend/src/chris/: mod.rs  test.rs
backend/src/configuration/: defaults.rs  language_config.rs  template_config.rs  user.rs
backend/src/configuration/language_config/: default.rs
backend/src/doc/: error.rs  format_blocks.rs  gen_html.rs  generate_pdf.rs  macro_dependency.rs  parser.rs  tangle.rs
backend/src/doc/parser/: code_block.rs
backend/src/exclude/: test.rs
backend/src/exclude/test_files/: test_1-in.md
backend/src/execution/: executors.rs  render_engine.rs  template_engine.rs  util.rs  wrappers.rs
backend/src/parse_slides/: mod.rs  test.rs
backend/src/parser/: code_block.rs
backend/src/parser/exclude/: mod.rs  test.rs  to_node.rs
backend/test_data/: main_block.c  output_file_2.c  slides.md  test_file.md  test_file_2.md  test_file_3.md  variable_user.c
docs/: cli.md  (+3 more)
(+117 files in other folders)
