[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.11.1"
markdown = { version = "1.0.0", features = ["serde"] }
mdast_util_to_markdown = "0.0.2"
log = "0.4.27"
serde_json = "1.0.140"
clap = { version = "4.5.39", features = ["derive", "env"] }
serde = { version = "1.0.219", features = ["derive"] }
once_cell = "1.21.3"

[dev-dependencies]
env_logger = "0.11.8"
test-log = "0.2.17"